src/objects/BMCServiceDesk__CustomAttachment__c.object
<CustomObject>
    <description>This object allows you to store data details of attachments for URL or File types.</description>
    <fields>
        <fullName>BMCServiceDesk__AttachmentId__c</fullName>
        <label>Attachment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__fileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentId__c</fullName>
        <label>Parent ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentName__c</fullName>
        <label>Parent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentType__c</fullName>
        <label>Parent Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Url</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CustomAttachment</label>
    <nameField>
        <displayFormat>Sequence{0000}</displayFormat>
        <label>CustomAttachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomAttachment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>